# rafael-automotive

./: .gitignore  BUILD_PLAN.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.bat
docs/: DEMO_CHECKLIST.md  FINALIZATION_CHECKLIST.md  SCOPE.md  client_chat_history.txt.txt  client_spec.txt  client_spec_v2.txt.txt  requirements_traceability.html
samples/: __init__.py  example_patches.json  make_sample.py
src/: __init__.py  main.py
src/app/: __init__.py  shell.py  theme.py
src/binary_studio/: __init__.py  binfile.py  checksum.py  hexview.py  identifiers.py  panel.py  patches.py
src/core/: __init__.py  findings.py  logbus.py
src/hardware/: __init__.py  j2534.py  mock_ecu.py  uds.py
src/ocpp_triage/: __init__.py  charge_point_sim.py  csms.py  inspector.py  panel.py  scenarios.py  sniffer.py  triage.py
tests/: test_binfile.py  test_checksum.py  test_core.py  test_hexview.py  test_identifiers.py  test_inspector.py  test_ocpp.py  test_ocpp_panel.py  test_panel.py  test_patches.py  test_sample.py  test_scenarios.py  test_shell.py  test_uds.py
